secr gets theses by status (active or under_review and copletes theses
