# backend/src/theses/controller.js
@@ -9,16 +9,6 @@ const createThesesController = async (req, res) => {
   }
 };;
 
-
-const getAllThesesController = async (req, res) => {
-  try {
-    const theses = await thesesService.getAllTheses();
-    res.json(theses);
-  } catch (err) {
-    res.status(500).json({ error: err.message });
-  }
-};
-
 const getThesesByIdController = async (req, res) => {
   try {
     const theses = await thesesService.getThesesById(req.params.id);
@@ -28,6 +18,18 @@ const getThesesByIdController = async (req, res) => {
     res.status(500).json({ error: err.message });
   }
 };
+
+//get theses status = active or status = under_review
+const getActiveAndUnderReviewController = async (req, res) => {
+  try {
+    const { status } = req.query; 
+    const theses = await thesesService.getActiveAndUnderReviewTheses();
+    res.json(theses);
+  } catch (err) {
+    res.status(400).json({ error: err.message });
+  }
+};
+
 
 const updateThesesController = async (req, res) => {
   try {
@@ -83,9 +85,8 @@ const cancelThesisController = async (req, res) => {
 
 const completeThesisController = async (req, res) => {
   try {
-    const updated = await thesesService.completeThesis(req.params.id, req.body);
-    if (!updated) return res.status(404).json({ error: "Thesis not found" });
-    res.json({ message: "Thesis marked as completed", thesis: updated });
+    const thesis = await thesesService.completeThesis(req.params.id);
+    res.json(thesis);
   } catch (err) {
     res.status(400).json({ error: err.message });
   }
@@ -274,8 +275,8 @@ const getCompletedThesisController = async (req, res) => {
 
 export default {
   createThesesController,
-  getAllThesesController,
   getThesesByIdController,
+  getActiveAndUnderReviewController,
   updateThesesController,
   assignThesesController,
   deleteThesesController,
