# swagger.yaml
@@ -734,6 +734,7 @@ paths:
           description: Student deleted successfully
         '404':
           description: Student not found
+
   /student/id/{id}:
     get:
       summary: Get a student by ID
@@ -762,6 +763,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+
   /theses:
     post:
       summary: Create a new theses
@@ -784,22 +786,20 @@ paths:
           description: Not authorized
 
     get:
-      summary: Get all theses
+      summary: Προβολή όλων των ΔΕ σε κατάσταση "active" ή "under_review"
       tags:
         - Theses
       security:
         - bearerAuth: []
       responses:
-        '200':
-          description: List of theses
+        "200":
+          description: Λίστα διπλωματικών
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Theses'
-        '401':
-          description: Unauthorized
+                  $ref: "#/components/schemas/Theses"
 
   /theses/me/invite:
     patch:
@@ -1545,46 +1545,28 @@ paths:
 
   /theses/{id}/complete:
     patch:
-      summary: Complete thesis (by Secretary)
-      description: Η Γραμματεία ολοκληρώνει τη διπλωματική, καταχωρώντας βαθμό και σύνδεσμο στο Νημερτή.
+      summary: Ολοκλήρωση ΔΕ (μόνο από τη Γραμματεία)
       tags:
         - Theses
       security:
         - bearerAuth: []
       parameters:
-        - name: id
-          in: path
-          required: true
+        - in: path
+          name: id
           schema:
             type: string
-          example: 64f1c2c5a7e8a21b9c123456
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - grade
-                - nimertis_link
-              properties:
-                grade:
-                  type: number
-                  format: float
-                  example: 8.5
-                nimertis_link:
-                  type: string
-                  format: uri
-                  example: "https://nemertes.lis.upatras.gr/jspui/handle/10889/12345"
+          required: true
+          description: ID της διπλωματικής
       responses:
-        '200':
-          description: Thesis completed successfully
+        "200":
+          description: Η διπλωματική ολοκληρώθηκε
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Theses'
+                $ref: "#/components/schemas/Thesis"
         '403':
           description: Not authorized
+
 
   /theses/{id}/completed:
     get:
